--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 <body>
   
   <audio id="background-audio" loop>
-    <source src="audio/last of us.mp3" type="audio/mp3">
+    <source src="audio/AUDIO.mp3" type="audio/mp3">
     Your browser does not support the audio element.
   </audio>
   
